--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   },
   "dependencies": {
     "express": "3.4.8",
-    "mongoose": "3.8.8",
-    "requirejs": "latest"
+    "mongoose": "3.8.8"
   },
   "devDependencies": {
     "grunt": "^0.4.2"
