--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "mongoose": "3.8.8"
   },
   "devDependencies": {
-    "grunt": "^0.4.2"
+    "grunt": "^0.4.2",
+    "grunt-contrib-concat": "^0.3.0",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
